fix title alignment in mobile header fix #180

--- a/assets/sass/components/navigation.scss
+++ b/assets/sass/components/navigation.scss
@@ -608,6 +608,7 @@ The design of the language navigation for cases, where their are more then five 
       display: block;
       font-size: 1em;
       margin: 0;
+      margin-top: 2px;
       float: left;
       font-family: $font-family-sans-serif-bold;
     }
